--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
-
+    namespace 'com.crazecoder.flutter_native_timezone'
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
